--- a/js/templates/navbarTemplate.handlebars
+++ b/js/templates/navbarTemplate.handlebars
@@ -2,14 +2,14 @@
       <a href="#!" class="brand-logo"> FluxRacine</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="">Sass</a></li>
-        <li><a href="">Components</a></li>
+        <li><a href="" class="audienceButton">Audience</a></li>
+        <li><a href="" class="usageBWButton">CDN & P2P</a></li>
         <li><a href="">Javascript</a></li>
         <li><a href="">Mobile</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="">Sass</a></li>
-        <li><a href="">Components</a></li>
+        <li><a href="" class="audienceButton">Audience</a></li>
+        <li><a href="" class="usageBWButton">CDN & P2P</a></li>
         <li><a href="">Javascript</a></li>
         <li><a href="">Mobile</a></li>
       </ul>
