Finished 3rd view.

--- a/js/templates/navbarTemplate.handlebars
+++ b/js/templates/navbarTemplate.handlebars
@@ -2,15 +2,13 @@
       <a href="#!" class="brand-logo"> FluxRacine</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="" class="audienceButton">Audience</a></li>
-        <li><a href="" class="usageBWButton">CDN & P2P</a></li>
-        <li><a href="">Javascript</a></li>
-        <li><a href="">Mobile</a></li>
+        <li><a href="#" id="audienceButton" class="pageButton">Audience</a></li>
+        <li><a href="#" id="usageBWButton" class="pageButton">CDN & P2P</a></li>
+        <li><a href="#" id="countryButton" class="pageButton">Traffic by country</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="" class="audienceButton">Audience</a></li>
-        <li><a href="" class="usageBWButton">CDN & P2P</a></li>
-        <li><a href="">Javascript</a></li>
-        <li><a href="">Mobile</a></li>
+        <li><a href="#" id="audienceButton" class="pageButton">Audience</a></li>
+        <li><a href="#" id="usageBWButton" class="pageButton">CDN & P2P</a></li>
+        <li><a href="#" id="countryButton" class="pageButton">Traffic by country</a></li>
       </ul>
     </div>
