--- a/js/templates/usageBandwidthTemplate.handlebars
+++ b/js/templates/usageBandwidthTemplate.handlebars
@@ -1,14 +1,12 @@
 <h4>CDN bandwidth and usage for May 08 2017</h4>
 <div class="embed">
-	<div id="line-chart-cdn" class="view">
-		<div class="vega-bindings"><div class="vega-bind"><span class="vega-bind-name">interpolate</span><select name="interpolate" class="browser-default"><option value="basis">basis</option><option value="cardinal">cardinal</option><option value="catmull-rom">catmull-rom</option><option value="linear" selected="true">linear</option><option value="monotone">monotone</option><option value="natural">natural</option><option value="step">step</option><option value="step-after">step-after</option><option value="step-before">step-before</option></select></div></div>
-	</div>
-	<a id="bar-chart-png" href="#">Export PNG</a>
-	<a id="bar-chart-svg" href="#">Export SVG</a>
+    <div id="line-chart-cdn" class="view"></div>
+    <a id="cdn-chart-png" href="#" class="export">Export PNG</a>
+    <a id="cdn-chart-svg" href="#" class="export">Export SVG</a>
 </div>
 <h4>P2P bandwidth and usage for May 08 2017</h4>
 <div class="embed">
-	<div id="line-chart-p2p" class="view"></div>
-	<a id="bar-chart-png" href="#">Export PNG</a>
-	<a id="bar-chart-svg" href="#">Export SVG</a>
+    <div id="line-chart-p2p" class="view"></div>
+    <a id="p2p-chart-png" href="#" class="export">Export PNG</a>
+    <a id="p2p-chart-svg" href="#" class="export">Export SVG</a>
 </div>
