--- a/js/templates/audienceTemplate.handlebars
+++ b/js/templates/audienceTemplate.handlebars
@@ -1,6 +1,6 @@
 <h4>Audience levels for May 08 2017</h4>
 <div class="embed">
   <div id="bar-chart" class="view"></div>
-  <a id="bar-chart-png" href="#">Export PNG</a>
-  <a id="bar-chart-svg" href="#">Export SVG</a>
+  <a id="bar-chart-png" href="#" class="exportButton">Export PNG</a>
+  <a id="bar-chart-svg" href="#" class="exportButton">Export SVG</a>
 </div>
