Final commit. Added a splash screen, some styling and an instruction file.

--- a/js/templates/audienceTemplate.handlebars
+++ b/js/templates/audienceTemplate.handlebars
@@ -1,5 +1,5 @@
-<h4>Audience levels for May 08 2017</h4>
-<div class="embed">
+<h4 class="center-align">Audience levels for May 08 2017</h4>
+<div class="center-align">
   <div id="bar-chart" class="view"></div>
   <a id="bar-chart-png" href="#" class="exportButton">Export PNG</a>
   <a id="bar-chart-svg" href="#" class="exportButton">Export SVG</a>
