--- a/js/templates/countryTemplate.handlebars
+++ b/js/templates/countryTemplate.handlebars
@@ -1,5 +1,5 @@
-<h4>CDN and P2P traffic by country</h4>
-<div class="embed">
+<h4 class="center-align">CDN and P2P traffic by country</h4>
+<div class="center-align">
   <div id="grouped-bar-chart" class="view"></div>
   <a id="grp-chart-png" href="#" class="exportGrp">Export PNG</a>
   <a id="grp-chart-svg" href="#" class="exportGrp">Export SVG</a>
