--- a/js/templates/usageBandwidthTemplate.handlebars
+++ b/js/templates/usageBandwidthTemplate.handlebars
@@ -1,11 +1,11 @@
-<h4>CDN bandwidth and usage for May 08 2017</h4>
-<div class="embed">
+<h4 class="center-align">CDN bandwidth and usage for May 08 2017</h4>
+<div class="center-align">
     <div id="line-chart-cdn" class="view"></div>
     <a id="cdn-chart-png" href="#" class="export">Export PNG</a>
     <a id="cdn-chart-svg" href="#" class="export">Export SVG</a>
 </div>
-<h4>P2P bandwidth and usage for May 08 2017</h4>
-<div class="embed">
+<h4 class="center-align">P2P bandwidth and usage for May 08 2017</h4>
+<div class="center-align">
     <div id="line-chart-p2p" class="view"></div>
     <a id="p2p-chart-png" href="#" class="export">Export PNG</a>
     <a id="p2p-chart-svg" href="#" class="export">Export SVG</a>
